frontend/test/should_fail/exectype_AssignMapCreationToVar2.grg
using exectype;

rule r
{
	modify  {
		exec(m:int =map<A,HH>);
	}
}